Nu kan det vara så coolt att det funkar. Eller så gör det inte det. GAMBLE!!!